cmake_minimum_required(VERSION 3.15)
project(CPP_Tutorial_Part4_Optimization_Advanced CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

# Global compilation flags
if(MSVC)
    add_compile_options(/W4 /O2)
    # Enable multiprocessor compilation
    add_compile_options(/MP)
else()
    add_compile_options(-Wall -Wextra -O2)
endif()

# Threading support (needed for many lessons)
find_package(Threads REQUIRED)

# Option to build all lessons or just specific ones
option(BUILD_ALL_LESSONS "Build all 100 lessons" ON)

# Performance Profiling (Lessons 01-20)
if(BUILD_ALL_LESSONS OR BUILD_PERF_PROFILING)
    add_subdirectory(Lesson01_PerfIntro)
    add_subdirectory(Lesson02_Benchmarking)
    add_subdirectory(Lesson03_VSProfiler)
    add_subdirectory(Lesson04_VTune)
    add_subdirectory(Lesson05_PerfCounters)
    add_subdirectory(Lesson06_MemoryProfiling)
    add_subdirectory(Lesson07_CacheOptimization)
    add_subdirectory(Lesson08_BranchPrediction)
    add_subdirectory(Lesson09_SIMD)
    add_subdirectory(Lesson10_CompilerOptimization)
    add_subdirectory(Lesson11_PGO)
    add_subdirectory(Lesson12_LTO)
    add_subdirectory(Lesson13_HotPath)
    add_subdirectory(Lesson14_DataOrientedDesign)
    add_subdirectory(Lesson15_MemoryLayout)
    add_subdirectory(Lesson16_CustomAllocators)
    add_subdirectory(Lesson17_ObjectPool)
    add_subdirectory(Lesson18_SmallStringOpt)
    add_subdirectory(Lesson19_CopyElision)
    add_subdirectory(Lesson20_PerfTestingFramework)
endif()

# Code Optimization (Lessons 21-40)
if(BUILD_ALL_LESSONS OR BUILD_CODE_OPT)
    add_subdirectory(Lesson21_BigOAnalysis)
    add_subdirectory(Lesson22_DataStructures)
    add_subdirectory(Lesson23_StringOptimization)
    add_subdirectory(Lesson24_LoopOptimization)
    add_subdirectory(Lesson25_Inlining)
    add_subdirectory(Lesson26_VirtualCallOpt)
    add_subdirectory(Lesson27_TemplateMetaprogramming)
    add_subdirectory(Lesson28_Constexpr)
    add_subdirectory(Lesson29_ZeroCost)
    add_subdirectory(Lesson30_MemoryAllocation)
    add_subdirectory(Lesson31_LazyEvaluation)
    add_subdirectory(Lesson32_ExpressionTemplates)
    add_subdirectory(Lesson33_CRTP)
    add_subdirectory(Lesson34_TypeErasure)
    add_subdirectory(Lesson35_SmallObjectOpt)
    add_subdirectory(Lesson36_FastMath)
    add_subdirectory(Lesson37_BitManipulation)
    add_subdirectory(Lesson38_LookupTables)
    add_subdirectory(Lesson39_BranchMinimization)
    add_subdirectory(Lesson40_OptimizationCases)
endif()

# Multithreading (Lessons 41-60)
if(BUILD_ALL_LESSONS OR BUILD_MULTITHREADING)
    add_subdirectory(Lesson41_ConcurrencyIntro)
    add_subdirectory(Lesson42_StdThread)
    add_subdirectory(Lesson43_ThreadManagement)
    add_subdirectory(Lesson44_RaceConditions)
    add_subdirectory(Lesson45_MutexLocks)
    add_subdirectory(Lesson46_LockFree)
    add_subdirectory(Lesson47_Atomics)
    add_subdirectory(Lesson48_MemoryOrdering)
    add_subdirectory(Lesson49_ConditionVariables)
    add_subdirectory(Lesson50_Semaphores)
    add_subdirectory(Lesson51_ThreadPool)
    add_subdirectory(Lesson52_WorkStealing)
    add_subdirectory(Lesson53_ProducerConsumer)
    add_subdirectory(Lesson54_ReadersWriters)
    add_subdirectory(Lesson55_AsyncFuture)
    add_subdirectory(Lesson56_Promises)
    add_subdirectory(Lesson57_ParallelAlgorithms)
    add_subdirectory(Lesson58_TaskParallelism)
    add_subdirectory(Lesson59_SIMDThreading)
    add_subdirectory(Lesson60_ConcurrentDataStructures)
endif()

# Design Patterns (Lessons 61-80)
if(BUILD_ALL_LESSONS OR BUILD_PATTERNS)
    add_subdirectory(Lesson61_PatternsIntro)
    add_subdirectory(Lesson62_Singleton)
    add_subdirectory(Lesson63_Factory)
    add_subdirectory(Lesson64_AbstractFactory)
    add_subdirectory(Lesson65_Builder)
    add_subdirectory(Lesson66_Prototype)
    add_subdirectory(Lesson67_Adapter)
    add_subdirectory(Lesson68_Bridge)
    add_subdirectory(Lesson69_Composite)
    add_subdirectory(Lesson70_Decorator)
    add_subdirectory(Lesson71_Facade)
    add_subdirectory(Lesson72_Proxy)
    add_subdirectory(Lesson73_ChainOfResponsibility)
    add_subdirectory(Lesson74_Command)
    add_subdirectory(Lesson75_Iterator)
    add_subdirectory(Lesson76_Observer)
    add_subdirectory(Lesson77_State)
    add_subdirectory(Lesson78_Strategy)
    add_subdirectory(Lesson79_TemplateMethod)
    add_subdirectory(Lesson80_Visitor)
endif()

# Real Projects (Lessons 81-100)
if(BUILD_ALL_LESSONS OR BUILD_PROJECTS)
    add_subdirectory(Lesson81_Architecture)
    add_subdirectory(Lesson82_DataProcessingEngine1)
    add_subdirectory(Lesson83_DataProcessingEngine2)
    add_subdirectory(Lesson84_GameEngine1)
    add_subdirectory(Lesson85_GameEngine2)
    add_subdirectory(Lesson86_NetworkServer)
    add_subdirectory(Lesson87_AnalyticsSystem)
    add_subdirectory(Lesson88_MemoryDatabase)
    add_subdirectory(Lesson89_RenderingEngine)
    add_subdirectory(Lesson90_MLFramework)
    add_subdirectory(Lesson91_CodeReview)
    add_subdirectory(Lesson92_Testing)
    add_subdirectory(Lesson93_CICD)
    add_subdirectory(Lesson94_Documentation)
    add_subdirectory(Lesson95_CrossPlatform)
    add_subdirectory(Lesson96_BuildSystems)
    add_subdirectory(Lesson97_AdvancedDebugging)
    add_subdirectory(Lesson98_Security)
    add_subdirectory(Lesson99_Refactoring)
    add_subdirectory(Lesson100_CareerFinal)
endif()

# Print summary
message(STATUS "")
message(STATUS "C++ Tutorial Part 4: Optimization & Advanced Topics")
message(STATUS "====================================================")
message(STATUS "Total lessons: 100")
message(STATUS "Build configuration: ${CMAKE_BUILD_TYPE}")
message(STATUS "C++ Standard: ${CMAKE_CXX_STANDARD}")
message(STATUS "Compiler: ${CMAKE_CXX_COMPILER_ID}")
message(STATUS "")
message(STATUS "Lesson categories:")
message(STATUS "  01-20: Performance Profiling")
message(STATUS "  21-40: Code Optimization")
message(STATUS "  41-60: Multithreading")
message(STATUS "  61-80: Design Patterns")
message(STATUS "  81-100: Real Projects")
message(STATUS "")
message(STATUS "To build a specific category, use:")
message(STATUS "  cmake -DBUILD_ALL_LESSONS=OFF -DBUILD_PERF_PROFILING=ON ..")
message(STATUS "")
