cmake_minimum_required(VERSION 3.15)

# 3D Math Lessons (01-20)

add_subdirectory(Lesson01_3DMathIntro)
add_subdirectory(Lesson02_VectorBasics)
add_subdirectory(Lesson03_VectorMath)
add_subdirectory(Lesson04_DotCrossProduct)
add_subdirectory(Lesson05_MatrixIntro)
add_subdirectory(Lesson06_MatrixOperations)
add_subdirectory(Lesson07_Transformations)
add_subdirectory(Lesson08_MatrixMultiplication)
add_subdirectory(Lesson09_CoordinateSystems)
add_subdirectory(Lesson10_HomogeneousCoords)
add_subdirectory(Lesson11_QuaternionIntro)
add_subdirectory(Lesson12_QuaternionRotations)
add_subdirectory(Lesson13_CameraMath)
add_subdirectory(Lesson14_ViewMatrix)
add_subdirectory(Lesson15_ProjectionMatrices)
add_subdirectory(Lesson16_ViewportTransform)
add_subdirectory(Lesson17_FrustumCulling)
add_subdirectory(Lesson18_RayIntersection)
add_subdirectory(Lesson19_BoundingVolumes)
add_subdirectory(Lesson20_MathLibrary)
