cmake_minimum_required(VERSION 3.15)

add_subdirectory(Lesson21_OpenGLSetup)
add_subdirectory(Lesson22_GLFWWindow)
add_subdirectory(Lesson23_Pipeline)
add_subdirectory(Lesson24_VBOandVAO)
add_subdirectory(Lesson25_FirstTriangle)
add_subdirectory(Lesson26_ShadersIntro)
add_subdirectory(Lesson27_VertexShader)
add_subdirectory(Lesson28_FragmentShader)
add_subdirectory(Lesson29_ShaderPrograms)
add_subdirectory(Lesson30_Texturing)
add_subdirectory(Lesson31_TextureFiltering)
add_subdirectory(Lesson32_MultipleTextures)
add_subdirectory(Lesson33_Transformations)
add_subdirectory(Lesson34_Camera)
add_subdirectory(Lesson35_PhongLighting)
add_subdirectory(Lesson36_Materials)
add_subdirectory(Lesson37_MultipleLights)
add_subdirectory(Lesson38_ModelLoading)
add_subdirectory(Lesson39_DepthTesting)
add_subdirectory(Lesson40_Blending)
